# digitaltwin

./: .gitignore  README.md  Untitled-1.md  kerala_urdf.urdf  logs.txt
colcon_ws/src/kerala_bot_description/: CMakeLists.txt  package.xml
colcon_ws/src/kerala_bot_description/launch/: display.launch.py
colcon_ws/src/kerala_bot_description/meshes/bed/: Profile_40x40_1075_v5.stl  Profile_40x40_1154_50_v3.stl  bed_1.stl
colcon_ws/src/kerala_bot_description/meshes/x_axis/: B2B_XH_A_LF__SN_.stl  B2B_XH_A_LF__SN__2.stl  Button.stl  BxB_XH_A_03_1.stl  BxB_XH_A_03_3.stl  COMPOUND_4.stl  C_0805_2012Metric.stl  Cap.stl  ContactClone.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_10.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_12.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_23.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_27.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_31.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_36.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_37.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_38.stl  DRV8825_STEPPER_MOTOR_DRIVER_CARRIER_42.stl  LeadB.stl  SOT_23.stl  (+200 more)
colcon_ws/src/kerala_bot_description/rviz/: robot.rviz
colcon_ws/src/kerala_bot_description/urdf/: robot.xacro
colcon_ws/src/kerala_bot_sim/: README.md  package.xml  setup.cfg  setup.py
colcon_ws/src/kerala_bot_sim/config/: axis_map.yaml  machine_state.yaml
colcon_ws/src/kerala_bot_sim/kerala_bot_sim/: __init__.py  mapping.py  model.py  overlay_plot.py  params.py  run_demo.py  rviz_player.py  simulate.py  state_listener.py  trajectory.py
colcon_ws/src/kerala_bot_sim/launch/: bringup.launch.py  playback.launch.py
(+760 files in other folders)
