<?xml version="1.0"?>
<package format="3">
  <name>kerala_bot_description</name>
  <version>0.0.1</version>
  <description>URDF/xacro description and meshes for the gantry robot digital twin</description>
  <maintainer email="siddharth@e-yantra.org">siddharth</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
