<?xml version="1.0"?>
<package format="3">
  <name>kerala_bot_sim</name>
  <version>0.0.1</version>
  <description>Per-axis stepper+belt dynamics simulator for trajectory feasibility, with
    commanded-vs-actual overlay plotting and an RViz playback node.</description>
  <maintainer email="siddharth@e-yantra.org">siddharth</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
